src/frontend/snapshots/Shlang__frontend__parser_test__func_decl_with_var.snap
---
source: src/frontend/parser_test.rs
expression: "parse_full(\"var a = func(b){1}\")"
---
[
    Spanned {
        unspanned: Declaration(
            Declaration {
                var_name: "a",
                value: Spanned {
                    unspanned: Value(
                        Function(
                            Function {
                                block: [
                                    Spanned {
                                        unspanned: ResultNode(
                                            Spanned {
                                                unspanned: Value(
                                                    Num(
                                                        1.0,
                                                    ),
                                                ),
                                                span: (
                                                    16,
                                                    17,
                                                ),
                                            },
                                        ),
                                        span: (
                                            16,
                                            17,
                                        ),
                                    },
                                ],
                                args: [
                                    "b",
                                ],
                            },
                        ),
                    ),
                    span: (
                        12,
                        18,
                    ),
                },
            },
        ),
        span: (
            4,
            7,
        ),
    },
]
