src/frontend/snapshots/Shlang__frontend__parser_test__func_expr.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr (\"func(b){1}\")"
---
Ok(
    Function(b){
        Result(
            Number(1),
        ) at 8:9,
    } at 4:10,
)
