src/frontend/snapshots/Shlang__frontend__parser_test__index.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr (\"a[1]\")"
---
Ok(
    Index {
        target: Var(a)[0,1],
        index: Number(1)[2,3],
    }[2,4],
)
