src/frontend/snapshots/Shlang__frontend__parser_test__index_with_call.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr(\"a[1]()[2]\")"
---
Ok(
    Spanned {
        item: Index {
            target: Spanned {
                item: Call(
                    Call {
                        callee: Spanned {
                            item: Index {
                                target: Spanned {
                                    item: Variable(
                                        "a",
                                    ),
                                    span: Span(
                                        0,
                                        1,
                                    ),
                                },
                                index: Spanned {
                                    item: Value(
                                        Num(
                                            1.0,
                                        ),
                                    ),
                                    span: Span(
                                        2,
                                        3,
                                    ),
                                },
                            },
                            span: Span(
                                1,
                                4,
                            ),
                        },
                        args: [],
                    },
                ),
                span: Span(
                    4,
                    6,
                ),
            },
            index: Spanned {
                item: Value(
                    Num(
                        2.0,
                    ),
                ),
                span: Span(
                    7,
                    8,
                ),
            },
        },
        span: Span(
            6,
            9,
        ),
    },
)
