src/frontend/snapshots/Shlang__frontend__parser_test__nested_block_with_result.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr (\"func(b){do{1}1}\")"
---
Ok(
    Function(b){
        Do{
            Result(
                Number(1),
            )[11,12],
        }[10,13],
        Result(
            Number(1),
        )[13,14],
    }[4,15],
)
