src/frontend/snapshots/Shlang__frontend__parser_test__nested_struct.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr(\"struct abc{struct dfg{};};\")"
---
Ok(
    Struct abc{
        Struct dfg{} at 18:23,
    } at 7:25,
)
