src/frontend/snapshots/Shlang__frontend__parser_test__nested_toplevel_block.snap
---
source: src/frontend/parser_test.rs
expression: "parse_full(\"func(b){do{1}}\")"
---
[
    Spanned {
        unspanned: ResultNode(
            Spanned {
                unspanned: Value(
                    Function(
                        Function {
                            block: [
                                Spanned {
                                    unspanned: DoBlock(
                                        [
                                            Spanned {
                                                unspanned: ResultNode(
                                                    Spanned {
                                                        unspanned: Value(
                                                            Num(
                                                                1.0,
                                                            ),
                                                        ),
                                                        span: (
                                                            11,
                                                            12,
                                                        ),
                                                    },
                                                ),
                                                span: (
                                                    11,
                                                    12,
                                                ),
                                            },
                                        ],
                                    ),
                                    span: (
                                        10,
                                        13,
                                    ),
                                },
                            ],
                            args: [
                                "b",
                            ],
                        },
                    ),
                ),
                span: (
                    4,
                    14,
                ),
            },
        ),
        span: (
            4,
            14,
        ),
    },
]
